# BadmintonCoachSkill

./: .gitignore  LICENSE  README.md  environment-video.yml  pyproject.toml
configs/: video-analysis.yaml
data/: source-index.tsv
docs/: annotation-guide.md  content-video-pipeline.md  github-publishing.md  legal-boundaries.md  project-positioning.md  source-collection-guide.md  video-agent-contract.md  video-evidence-web-app.md
examples/: run_full_system_cases.py  run_usage_case.py
schemas/: diagnosis.schema.json  player-profile.schema.json  source-topic-map.schema.json  system-taxonomy.schema.json  teaching-point.schema.json  timestamp-evidence.schema.json  video-observation.schema.json  video-processing-job.schema.json
scripts/: audit_multimodal_completion.py  build_asr_status_manifest.py  build_asr_teaching_windows.py  build_asr_timestamp_review.py  build_coach_source_index.py  build_corpus_report.py  build_multimodal_skill_evidence.py  build_pose_evidence_summary.py  build_semantic_claim_review.py  build_temporal_pose_summary.py  build_temporal_review_manifest.py  build_video_corpus_manifest.py  build_video_pilot_manifest.py  build_video_retry_manifest.py  build_visual_completion_status.py  build_visual_evidence_summary.py  build_visual_pipeline_manifest.py  build_visual_review_manifest.py  check_source_integrity.py  discover_bilibili_coach_corpus.py  evaluate_video_pilot.py  import_bilibili_fav.py  import_bilibili_view_season.py  import_yt_dlp_jsonl.py  rebuild_video_evidence_index.py  review_keyframe_quality.py  run_asr_reuse_batch_on_node.py  (+3 more)
(+625 files in other folders)
