[project]
name = "badminton-coach-skill"
version = "0.1.0"
description = "Evidence-grounded badminton coach skill and rule matcher."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "fastapi>=0.115,<1.0",
  "celery>=5.4,<6.0",
  "python-multipart>=0.0.12,<1.0",
  "redis>=5.0,<6.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]
